large screen grid

--- a/react/index.html
+++ b/react/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Humdard - Learn Hindi Through Lyrics</title>
+    <title>Samajh - Learn Hindi Through Lyrics</title>
     <style>
         * {
             margin: 0;
